--- a/OneMore/OneMore.csproj
+++ b/OneMore/OneMore.csproj
@@ -1635,6 +1635,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Commands\File\PluginDialog.resx">
       <DependentUpon>PluginDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Commands\Search\SearchAndReplaceDialog.resx">
       <DependentUpon>SearchAndReplaceDialog.cs</DependentUpon>
